--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -29,13 +29,14 @@
             android:layout_height="10dp"/>
         <ToggleButton
             android:id="@+id/btnAdd"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/baseline_add_24"
             />
 
-    </LinearLayout>
+    </LinearLayout> 
 
     <androidx.cardview.widget.CardView
         app:cardCornerRadius="60dp"
