--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -7,49 +7,66 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".SubActivity"
-    android:background="@color/black_spotify">
+    android:background="@drawable/custom_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnBack"
+        <androidx.cardview.widget.CardView
+            android:layout_margin="5dp"
+            app:cardElevation="20dp"
+            app:cardBackgroundColor="@color/black_spotify"
+            app:cardCornerRadius="50dp"
             android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="50dp">
+        <Button
+            android:layout_gravity="center"
+            android:id="@+id/btnBack"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
             android:background="@drawable/baseline_arrow_back_ios_24"
             android:text=""
-            app:backgroundTint="@color/white_spotify" />
+            app:backgroundTint="@color/white_50" />
+        </androidx.cardview.widget.CardView>
         <View
             android:layout_width="280dp"
             android:layout_height="10dp"/>
+        <androidx.cardview.widget.CardView
+            app:cardElevation="20dp"
+            app:cardCornerRadius="50dp"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/black_spotify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         <ToggleButton
+            android:layout_gravity="center"
             android:id="@+id/btnAdd"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="10dp"
+
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:backgroundTint="@color/white_50"
             android:background="@drawable/baseline_add_24"
             />
-
+        </androidx.cardview.widget.CardView>
     </LinearLayout> 
 
     <androidx.cardview.widget.CardView
-        app:cardCornerRadius="60dp"
+        app:cardBackgroundColor="@color/gray_white"
+
         app:cardElevation="100dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageView
+            android:alpha="0.7"
             android:layout_gravity="center"
             android:id="@+id/ivSongSub"
             android:layout_width="300dp"
-            android:layout_height="300dp"
-            app:srcCompat="@drawable/baseline_music_note_24"
+            android:layout_height="170dp"
+            app:srcCompat="@drawable/attention"
             app:backgroundTint = "@null"/>
     </androidx.cardview.widget.CardView>
     <TextView
@@ -61,7 +78,7 @@
         android:text="Song Name"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/black_spotify"
         />
 
     <TextView
@@ -73,11 +90,11 @@
         android:text="Singer Name"
         android:textSize="16sp"
         android:textStyle="italic"
-        android:textColor="@color/white"/>
+        android:textColor="@color/black_spotify"/>
 
     <SeekBar
-        android:progressTint="@color/white"
-        android:thumbTint="@color/white"
+        android:progressTint="@color/black_spotify"
+        android:thumbTint="@color/black_spotify"
         android:id="@+id/sbTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,7 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
-            android:textColor="@color/white"
+            android:textColor="@color/black_spotify"
             android:text="00:00" />
 
         <TextView
@@ -105,7 +122,7 @@
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:text="00:00"
-            android:textColor="@color/white"
+            android:textColor="@color/black_spotify"
             android:textAlignment="viewEnd" />
 
     </LinearLayout>
@@ -124,7 +141,7 @@
             android:layout_weight="1"
             android:text=""
             android:background="@drawable/baseline_skip_previous_24"
-            app:backgroundTint = "@null" />
+            app:backgroundTint = "@color/black_spotify" />
 
         <Button
             android:id="@+id/btnSkipPre"
@@ -132,7 +149,7 @@
             android:layout_height="70dp"
             android:layout_weight="1"
             android:background="@drawable/baseline_fast_rewind_24"
-            app:backgroundTint = "@null"
+            app:backgroundTint = "@color/black_spotify"
             android:text="" />
 
         <Button
@@ -141,14 +158,14 @@
             android:layout_height="110dp"
             android:background="@drawable/baseline_pause_circle_24"
             android:text=""
-            app:backgroundTint="@color/green_spotify" />
+            app:backgroundTint="@color/black_spotify" />
 
         <Button
             android:id="@+id/btnSkipNext"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_weight="1"
-            app:backgroundTint = "@null"
+            app:backgroundTint = "@color/black_spotify"
             android:background="@drawable/baseline_fast_forward_24"
             android:text="" />
 
@@ -156,7 +173,7 @@
             android:id="@+id/btnNextSong"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:backgroundTint = "@null"
+            app:backgroundTint = "@color/black_spotify"
             android:background="@drawable/baseline_skip_next_24"
             android:layout_weight="1"
             android:text="" />
@@ -175,7 +192,7 @@
             android:layout_width="30dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            app:backgroundTint = "@color/white_spotify"
+            app:backgroundTint = "@color/black_spotify"
             android:background="@drawable/baseline_volume_up_24"
             android:layout_weight="1"
             android:text="" />
@@ -185,8 +202,8 @@
             android:layout_width="300dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:progressTint="@color/white_spotify"
-            android:thumbTint="@color/white_spotify" />
+            android:progressTint="@color/black_spotify"
+            android:thumbTint="@color/black_spotify" />
     </LinearLayout>
 
 </LinearLayout>
