--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -9,126 +9,176 @@
     tools:context=".SubActivity"
     android:background="@drawable/custom_background">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="460dp">
 
-        android:orientation="horizontal">
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.002">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                app:cardBackgroundColor="@color/black"
+                app:cardCornerRadius="50dp"
+                app:cardElevation="20dp">
+
+                <Button
+                    android:id="@+id/btnBack"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="5dp"
+                    android:background="@drawable/baseline_arrow_back_ios_24"
+                    android:text=""
+                    app:backgroundTint="@color/white_50" />
+            </androidx.cardview.widget.CardView>
+
+            <View
+                android:layout_width="280dp"
+                android:layout_height="10dp" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:cardBackgroundColor="@color/black"
+                app:cardCornerRadius="50dp"
+                app:cardElevation="20dp">
+
+                <ToggleButton
+                    android:id="@+id/btnAdd"
+                    android:layout_width="50dp"
+
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/baseline_add_24"
+                    android:backgroundTint="@color/white_50" />
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
         <androidx.cardview.widget.CardView
-            android:layout_margin="5dp"
-            app:cardElevation="20dp"
-            app:cardBackgroundColor="@color/black_spotify"
-            app:cardCornerRadius="50dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp">
-        <Button
-            android:layout_gravity="center"
-            android:id="@+id/btnBack"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="5dp"
-            android:background="@drawable/baseline_arrow_back_ios_24"
-            android:text=""
-            app:backgroundTint="@color/white_50" />
-        </androidx.cardview.widget.CardView>
-        <View
-            android:layout_width="280dp"
-            android:layout_height="10dp"/>
-        <androidx.cardview.widget.CardView
-            app:cardElevation="20dp"
-            app:cardCornerRadius="50dp"
-            android:layout_margin="5dp"
-            app:cardBackgroundColor="@color/black_spotify"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        <ToggleButton
-            android:layout_gravity="center"
-            android:id="@+id/btnAdd"
 
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:backgroundTint="@color/white_50"
-            android:background="@drawable/baseline_add_24"
-            />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:cardBackgroundColor="@color/gray_white"
+            app:cardElevation="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/sbTime"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/sbTime"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintVertical_bias="0.5">
+
         </androidx.cardview.widget.CardView>
-    </LinearLayout> 
-
-    <androidx.cardview.widget.CardView
-        app:cardBackgroundColor="@color/gray_white"
-
-        app:cardElevation="100dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:alpha="0.7"
-            android:layout_gravity="center"
-            android:id="@+id/ivSongSub"
-            android:layout_width="300dp"
-            android:layout_height="170dp"
-            app:srcCompat="@drawable/attention"
-            app:backgroundTint = "@null"/>
-    </androidx.cardview.widget.CardView>
-    <TextView
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:id="@+id/lbSongNameSub"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Song Name"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/black_spotify"
-        />
-
-    <TextView
-        android:layout_margin="10dp"
-        android:layout_gravity="center"
-        android:id="@+id/lbSingerNameSub"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Singer Name"
-        android:textSize="16sp"
-        android:textStyle="italic"
-        android:textColor="@color/black_spotify"/>
-
-    <SeekBar
-        android:progressTint="@color/black_spotify"
-        android:thumbTint="@color/black_spotify"
-        android:id="@+id/sbTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:progress="30" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/lbStart"
+            android:id="@+id/lbSongNameSub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:text="Song Name"
             android:textColor="@color/black_spotify"
-            android:text="00:00" />
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.473"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivSongSub"
+            app:layout_constraintVertical_bias="0.066" />
 
         <TextView
-            android:id="@+id/lbEnd"
+            android:id="@+id/lbSingerNameSub"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:text="00:00"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:text="Singer Name"
             android:textColor="@color/black_spotify"
-            android:textAlignment="viewEnd" />
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lbSongNameSub"
+            app:layout_constraintVertical_bias="0.044" />
 
-    </LinearLayout>
+        <SeekBar
+            android:id="@+id/sbTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:progress="30"
+            android:progressTint="@color/black_spotify"
+            android:thumbTint="@color/black_spotify"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lbSingerNameSub"
+            app:layout_constraintVertical_bias="0.5" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lbSingerNameSub">
+
+            <TextView
+                android:id="@+id/lbStart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:text="00:00"
+                android:textColor="@color/black_spotify" />
+
+            <TextView
+                android:id="@+id/lbEnd"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:text="00:00"
+                android:textAlignment="viewEnd"
+                android:textColor="@color/black_spotify" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/ivSongSub"
+            android:layout_width="416dp"
+            android:layout_height="237dp"
+            android:layout_gravity="center"
+            android:alpha="0.7"
+            app:backgroundTint="@null"
+            app:srcCompat="@drawable/attention"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="2dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:layout_marginTop="20dp"
+
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
