--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -57,7 +57,7 @@
                 app:cardCornerRadius="50dp"
                 app:cardElevation="20dp">
 
-                <ToggleButton
+                <Button
                     android:id="@+id/btnAdd"
                     android:layout_width="50dp"
 
